src/objects/Question_Template__c.object
<CustomObject>
    <description>Used to collect the information needed to support the Questions ExAM uses to elicit participant information.</description>
    <fields>
        <fullName>Count_Questions__c</fullName>
        <inlineHelpText>To calculate no of questions in each section so we can find if the answers are given than we say this section is complete.</inlineHelpText>
        <label>Count Questions</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Count_of_Responses__c</fullName>
        <label>Count of Responses</label>
        <summaryForeignKey>Questionnaire_Response__c.Question_Template__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Decision_Tree__c</fullName>
        <label>Decision Tree Result Page Fields Default</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Default_Value__c</fullName>
        <label>Default Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dependent_Question__c</fullName>
        <label>Dependent Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Create_Answer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Create Answer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Length__c</fullName>
        <label>Field Length</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Focus_category__c</fullName>
        <description>Group which will have questions from different sections</description>
        <inlineHelpText>Group which will have questions from different sections</inlineHelpText>
        <label>Focus category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Picture__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Picture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HelpText__c</fullName>
        <description>This is the text which we want to shown on mouse hover</description>
        <inlineHelpText>This is the text which we want to shown on mouse hover</inlineHelpText>
        <label>Help Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hotspot_Image_Properties__c</fullName>
        <label>Hotspot Image Properties</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hotspot_Image_Upload__c</fullName>
        <formula>IF(ISPICKVAL( Question_Type__c , &apos;Hotspot Image&apos;),HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&quot;apex/ExAM__UploadHotspotImage?quesTempId=&quot; + Id ,&apos;Upload Hotspot Image&apos;,&apos;_self&apos;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hotspot Image Upload</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Dependent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Dependent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Knowledge_Article_Link__c</fullName>
        <label>Knowledge Article Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Likert__c</fullName>
        <label>Likert</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agreement</fullName>
                </value>
                <value>
                    <fullName>Frequency</fullName>
                </value>
                <value>
                    <fullName>Importance</fullName>
                </value>
                <value>
                    <fullName>Likelihood</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Question__c</fullName>
        <label>Next Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Question External Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Label__c</fullName>
        <description>This is the question label eg. What are the standard operating hours?</description>
        <inlineHelpText>This is the question label eg. What are the standard operating hours?</inlineHelpText>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_Order_No__c</fullName>
        <description>Question Order No to specify which questions should be displayed first</description>
        <label>Question Order No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Restricted_Length__c</fullName>
        <inlineHelpText>This has first 255 characters of main question label. Long text area cant be used in formula field</inlineHelpText>
        <label>Question Restricted Length</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_Short_Name__c</fullName>
        <label>Question Short Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <inlineHelpText>Pick from a list text, picklist etc</inlineHelpText>
        <label>Question Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MultiselectPicklist</fullName>
                </value>
                <value>
                    <fullName>RadioPicklist</fullName>
                </value>
                <value>
                    <fullName>Dropdown Picklist</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Textarea</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Result</fullName>
                </value>
                <value>
                    <fullName>Assessment Completed</fullName>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone Number</fullName>
                </value>
                <value>
                    <fullName>Button</fullName>
                </value>
                <value>
                    <fullName>File Question - Answer</fullName>
                </value>
                <value>
                    <fullName>File Question - AM</fullName>
                </value>
                <value>
                    <fullName>Signature</fullName>
                </value>
                <value>
                    <fullName>Hotspot Image</fullName>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Horizontal Radiopicklist</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Hidden</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>File Question - Assessable Object</fullName>
                </value>
                <value>
                    <fullName>Likert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Result_Page_Configuration__c</fullName>
        <formula>IF(
 ISPICKVAL(Question_Type__c, &apos;Result&apos;),
 HYPERLINK( 
    LEFT($Api.Partner_Server_URL_260, 
    FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + 
    &quot;apex/ExAM__TemplateFieldDefaultValueConfiguration?questionTemplateId=&quot; + Id, 
    &apos;Result Page Configuration&apos;, 
    &apos;_self&apos; 
 ),
&apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Result Page Configuration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Question__c</fullName>
        <description>Master- Detail relationship- Section is Master and Detail is Question</description>
        <inlineHelpText>Master- Detail relationship- Section is Master and Detail is Question</inlineHelpText>
        <label>Master Section to Detail Question</label>
        <referenceTo>Section_Template__c</referenceTo>
        <relationshipName>Question_Template</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Single_Next_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to next question in decision tree</description>
        <inlineHelpText>Lookup to next question in decision tree</inlineHelpText>
        <label>Single Next Question</label>
        <referenceTo>Question_Template__c</referenceTo>
        <relationshipLabel>Question Templates</relationshipLabel>
        <relationshipName>Question_Template</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubSection_label__c</fullName>
        <inlineHelpText>The main section is already there so put the sub sections here</inlineHelpText>
        <label>Sub Section label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subquestion_Label__c</fullName>
        <description>Put all values ~ separated</description>
        <inlineHelpText>Put all values ~ separated</inlineHelpText>
        <label>Answer Options</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Upload_Answer_Option_Images__c</fullName>
        <formula>IF(ISPICKVAL(Question_Type__c, &apos;Image&apos;),HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&quot;apex/ExAM__UploadAnswerOptionImages?quesTempId=&quot; + Id ,&apos;Upload Answer Option Images&apos;,&apos;_self&apos;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upload Answer Option Images</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upload_Question_Image__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&quot;apex/ExAM__UploadQuestionImage?quesTempId=&quot; + Id ,&apos;Upload Question Image&apos;,&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upload Question Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_URL__c</fullName>
        <label>Video URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Weight_Of_Question__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the question weight</inlineHelpText>
        <label>Question Weight</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight_of_Answer__c</fullName>
        <inlineHelpText>Each answer weight/score is entered with tilde sign and total should be 100%.E.g. 10~50~40 for each answer option.</inlineHelpText>
        <label>Answer Options Weight(%)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Question Template</label>
    <nameField>
        <displayFormat>Q-{0}</displayFormat>
        <label>Question_Template id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Hidden_Question_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Question_Type__c , &apos;Hidden&apos;), ISBLANK( Default_Value__c ) )</errorConditionFormula>
        <errorDisplayField>Default_Value__c</errorDisplayField>
        <errorMessage>Please enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Likert_Should_Not_Be_Left_Empty</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
(TEXT(Question_Type__c) == &apos;Likert&apos;), 
(TEXT(Likert__c) == &apos;&apos;) 
)</errorConditionFormula>
        <errorDisplayField>Likert__c</errorDisplayField>
        <errorMessage>Please select a Likert option</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MultiselectPicklist_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(Question_Type__c) == &apos;MultiselectPicklist&apos;,CONTAINS(Next_Question__c, &apos;~&apos;))</errorConditionFormula>
        <errorMessage>Please set only one Next Question for MultiselectPicklist question type</errorMessage>
    </validationRules>
</CustomObject>